--- a/Lab4/app/src/main/AndroidManifest.xml
+++ b/Lab4/app/src/main/AndroidManifest.xml
@@ -11,13 +11,14 @@
         <activity
             android:screenOrientation="portrait"
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="Lab4" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
