--- a/Lab4/app/src/main/AndroidManifest.xml
+++ b/Lab4/app/src/main/AndroidManifest.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.anders.drawingapp" >
+    package="com.example.anders.lab4" >
 
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/bubbleicon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
             android:screenOrientation="portrait"
-            android:name=".MainActivity"
-            android:label="Lab4" >
+            android:name="com.example.anders.lab4.MainActivity"
+            android:label="Bubble Merger" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
